# Agora_Linux_cpp_multithread

./: README.md
agora_rtc_sdk/: .gitignore  PACKAGE_INFO
agora_rtc_sdk/agora_sdk/include/: AgoraBase.h  AgoraMediaBase.h  IAgoraMediaRecorder2.h  IAgoraService.h  NGIAgoraAudioTrack.h  NGIAgoraExtensionMccYSDScore.h  NGIAgoraExtensionScreenSource.h  NGIAgoraLocalUser.h  NGIAgoraMediaNode.h  NGIAgoraMediaNodeFactory.h  NGIAgoraRtcConnection.h  NGIAgoraScreenCapturer.h  NGIAgoraSyncClient.h  NGIAgoraVideoMixerSource.h  NGIAgoraVideoTrack.h
agora_rtc_sdk/agora_sdk/include/api/: Makefile  aosl_angel.h  aosl_async.h  aosl_defs.h  aosl_file.h  aosl_gfsm.h  aosl_iovec.h  aosl_jni.h  aosl_kobj.h  aosl_list.h  aosl_marshalling.h  aosl_mpq.h  aosl_mpq_fd.h  aosl_mpq_net.h  aosl_mpq_timer.h  aosl_mpqp.h  aosl_pktspltr.h  aosl_rbtree.h  aosl_ref.h  aosl_so.h  aosl_socket.h  aosl_task.h  aosl_thread.h  aosl_version.h
agora_rtc_sdk/agora_sdk/include/api/cpp/: Makefile  aosl_async_class.h  aosl_callable_class.h  aosl_data_class.h  aosl_file_class.h  aosl_gfsm_class.h  aosl_input_class.h  aosl_iovec_class.h  aosl_kobj_class.h  aosl_mpq_fd_class.h  aosl_mpq_sk_lambda.h  aosl_mpq_timer_lambda.h  aosl_sbus_class.h  aosl_task_class.h  aosl_thread_class.h  aosl_value_class.h
agora_rtc_sdk/agora_sdk/include/c/api2/: agora_audio_track.h  agora_local_user.h  agora_media_node_factory.h  agora_rtc_conn.h  agora_service.h
agora_rtc_sdk/agora_sdk/include/c/base/: agora_base.h  agora_media_base.h  agora_media_player_source.h
agora_rtc_sdk/agora_sdk/include/c/rte/: rte.h
agora_rtc_sdk/example/: CMakeLists.txt  README.md  README.zh.md  build.sh  message.txt  multi_channels_yuv.sh  stress_test.sh  sync-data.sh
agora_rtc_sdk/example/capture_yuv/: CMakeLists.txt  sample_send_capture_yuv.cpp  yuv_capture.cpp  yuv_capture.h
agora_rtc_sdk/example/cloud_proxy/: CMakeLists.txt  reset.sh  sample_send_pcm_by_cloud_proxy.cpp  set_proxy.sh
agora_rtc_sdk/example/common/: sample_local_user_observer.cpp  sample_local_user_observer.h
agora_rtc_sdk/example/datastream/: CMakeLists.txt  sample_receive_datastream.cpp  sample_send_datastream.cpp
agora_rtc_sdk/example/encoded_audio/: CMakeLists.txt  sample_receive_encoded_audio.cpp  sample_send_aac.cpp  sample_send_opus.cpp
agora_rtc_sdk/example/encrypt/: sample_receive_decrypted_h264.cpp  sample_send_encrypted_h264.cpp
agora_rtc_sdk/example/h264_pcm/: sample_receive_h264_pcm.cpp  sample_send_h264_pcm.cpp
agora_rtc_sdk/example/h265/: CMakeLists.txt  sample_send_h265.cpp
agora_rtc_sdk/example/mixed_audio/: CMakeLists.txt  sample_receive_mixed_audio.cpp
agora_rtc_sdk/example/rtmp/: CMakeLists.txt  sample_send_yuv_pcm_via_rtmp.cpp
agora_rtc_sdk/example/scripts/: check.cmake  env.cmake  os.cmake
agora_rtc_sdk/example/send_dual_video_stream/: CMakeLists.txt  sample_send_h264_dual_stream.cpp  sample_send_yuv_dual_stream.cpp
agora_rtc_sdk/example/string_uid/: CMakeLists.txt  sample_stringuid_receive.cpp  sample_stringuid_send.cpp
agora_rtc_sdk/example/video_mixer/: CMakeLists.txt  video_mixer.cpp
agora_rtc_sdk/example/vp8/: CMakeLists.txt  sample_send_ivfvp8.cpp
agora_rtc_sdk/example/yuv_pcm/: CMakeLists.txt  sample_multithd_receive_yuv_pcm.cpp  sample_multithd_send_yuv_pcm.cpp  sample_receive_yuv_pcm.cpp  sample_send_yuv_pcm.cpp
agora_rtc_sdk/libjpg/lib/: libjpeg.la  libjpeg.so.9.5.0
agora_rtc_sdk/libjpg/lib/pkgconfig/: libjpeg.pc
